# PF_ChatBot

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
data/: chroma.sqlite3
src/: agent_check.py  agent_check_copy.py  change_yaml.py  create_agent.py  delete_agent.py  export_yaml.py  fetch_agent.py  generate_yaml.py  get_agent_id.py  get_agent_info.py
src/Archive/: create_agent_InitialAccess_cmd.py  delete_empty.py  get_guideline.py  get_guideline_empty.py  get_terms.py  get_terms_empty.py
src/yaml_file/: InitialAccessSpecialist-20250509-1535.yaml  InitialAccessSpecialist.yaml  PrivilegeEscalationSpecialist.yaml  ReconSpecialist-20250606-0941.yaml  ReconSpecialist.yaml  nmapSpecialist-20250509-1534.yaml  nmapSpecialist.yaml  test_0.yaml  test_1.yaml  test_2.yaml
