[tool.poetry]
name = "pf-chatbot"  
version = "0.1.0"
description = "Security education chatbot using Parlant"
authors = ["Taichi Akamaru <taichi.akamaru@nflabs.jp>"]
packages = [
    { include = "parlant", from = "parlant/src" },
    { include = "parlant_client", from = "parlant-client-python/src/parlant" }
]

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
aiopenapi3 = "0.8.1"
aiorwlock = "^1.5.0"
boto3 = "^1.35.70"
chromadb = "0.5.17"
click = "^8.1.7"
click-completion = "^0.5.2"
colorama = "^0.4.6"
coloredlogs = "^15.0.1"
contextvars = "^2.4"
croniter = "^5.0.1"
fastapi = "0.115.12"
httpx = "^0.27.0"
jsonfinder = "^0.4.2"
jsonschema = "^4.23.0"
lagom = "^2.6.0"
more-itertools = ">=10.3.0"
nano-vectordb = "^0.0.4.3"
nanoid = "^2.0.0"
networkx = { extras = ["default"], version = "^3.3" }
openai = "^1.45.0"
openapi3-parser = "1.1.21"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"
parlant-client = { path = "parlant-client-python", develop = true }
python = "^3.10"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
rich = "^13.7.1"
semver = "^3.0.2"
structlog = "^24.4.0"
tabulate = "^0.9.0"
tenacity = "^8.4.2"
tiktoken = "^0.8"
tokenizers = "^0.20"
toml = "^0.10.2"
types-aiofiles = "^24.1.0.20240626"
types-croniter = "^4.0.0.20241030"
types-jsonschema = "^4.22.0.20240610"
uvicorn = "^0.32.1"
parlant = {path = "parlant", develop = true}
